feat: migrate sessions and password changes to java
